[package]
name = "ndalmeida-cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
shuttle-axum = { version = "0.35.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.0"
tokio = "1.28.2"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-extra = { version = "0.9.0", features = ["cookie"] }
base64 = "0.21.5"
axum-macros = "0.4.0"
reqwest = { version = "0.11.22", features = ["json"] }
